--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_PASSWORD="Wastedlol1234"
+DATABASE_URL=postgresql://postgres:MqQrLguxdDafDFGQZKPcqgfvhcnxIIEg@yamanote.proxy.rlwy.net:43421/railway
 PORT=8080
